<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Park My Car</string>
    <string name="action_settings">Settings</string>
    <string name="userProfil">userProfil</string>
    <string name="logo">logo</string>
    <string name="usernameHint">Nom utilisateur</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="ConfirmezmotDePasse">Confirmez mot de passe</string>
    <string name="taillevoiture"> Taille Voiture</string>
    <string name="title_activity_main_user">Park My Car</string>
    <string name="title_section3">Mon profil</string>
    <string name="title_section1">Ma carte</string>
    <string name="title_section2">Mes Favoris</string>
    <string name="title_activity_place_information">PlaceInformation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baseUrl">http://localhost:8080</string>

    <!-- Display information on a place -->
    <string name="id_place_label">Id de la place</string>
    <string name="id_place_value">[id]</string>

    <!-- API key-->
    <string name="APIKey_c">AIzaSyApl9xj59pteXu5YnxXHWGeLI8i11T8qsk</string>
    <string name="APIKey_i">AIzaSyDp_QbB_9fdMEcSdv7HtixcA43gFT8vPLQ</string>
    <string name="APIKey_g">AIzaSyDoSZRua5uN47O_hVqJc9F4ptgG1ZZAvP0</string>


    <string-array name="size_arrays">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="title_activity_mine">mine</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_create_user">Nouveau utilisateur</string>
    <string name="leftButton">leftButton</string>
    <string name="rightButton">rightButton</string>
    <string name="title_activity_information_user">Profil utilisateur</string>
    <string name="title_activity_mail">e-mail</string>

    <string-array name="menu_array">
        <item>Park My Car</item>
        <item>Accueil</item>
        <item>Mon compte</item>
        <item>Paramètres</item>
        <item>A propos</item>

    </string-array>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>
